--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@pixi/react": "7.1.1",
-    "autoprefixer": "^10.4.21",
+    "@pixi/react": "^7.1.1",
     "pixi.js": "^7.3.3",
-    "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1"
