--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "ethers": "^6.13.5",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
+    "snarkjs": "^0.7.5",
     "tailwindcss": "^4.0.15",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
