--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+cache
+out
+*.ptau
+*_obj/
+.env-secret
+!.env
+contracts/artifacts/
+ui/public/circuits/
+contracts/revealVerifier.sol
