--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "workspaces": ["ui", "circuits", "contracts"],
   "private": true,
   "scripts": {
+    "dev:chain": "cd contracts && npm run chain",
     "build:circuits": "cd circuits && npm run build",
     "build:contracts": "cd contracts && npm run build",
     "build": "npm run build:circuits && npm run build:contracts"
